add new message at the end of the file

--- a/index.html
+++ b/index.html
@@ -11852,6 +11852,9 @@ margin: 0 auto;">👍👍</p>
           <p>Make your better version </p>
           </div>
 
+          <!-- message from Peta -->
+          <div>Great tutorial!</div>
+          <!-- end of message from Peta -->
 
           <!-- End user messages -->
         </div>
