add another message at the EOF

--- a/index.html
+++ b/index.html
@@ -11856,6 +11856,10 @@ margin: 0 auto;">👍👍</p>
           <div>Great tutorial!</div>
           <!-- end of message from Peta -->
 
+          <!-- message from Peta -->
+          <div>This is another message from me!</div>
+          <!-- end of message from Peta -->          
+
           <!-- End user messages -->
         </div>
       </div>
