add final message at the EOF

--- a/index.html
+++ b/index.html
@@ -11858,7 +11858,11 @@ margin: 0 auto;">👍👍</p>
 
           <!-- message from Peta -->
           <div>This is another message from me!</div>
-          <!-- end of message from Peta -->          
+          <!-- end of message from Peta -->       
+
+          <!-- message from Peta -->
+          <div>This is the last message from me!</div>
+          <!-- end of message from Peta -->      
 
           <!-- End user messages -->
         </div>
